--- a/index.html
+++ b/index.html
@@ -149,10 +149,8 @@
     <!-- <script src="js/three.js"></script>
     <script src="js/collada.js"></script>
     <script src="js/script.js"></script> -->
-    <script src="lib/jquery/dist/jquery.js"></script>
-    <script src="lib/fullpage.js/dist/jquery.fullpage.js"></script>
-    <script src="js/init_fullpage.js"></script>
     
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.js"></script>
   <script src="js/smooth_scroll.js"></script>
 
     <!--script src="js/background.js"></script-->
