--- a/services.html
+++ b/services.html
@@ -152,12 +152,13 @@
     <!-- <script src="js/three.js"></script>
     <script src="js/collada.js"></script>
     <script src="js/script.js"></script> -->
-    <script src="lib/jquery/dist/jquery.js"></script>
-    <script src="lib/fullpage.js/dist/jquery.fullpage.js"></script>
-    <script src="js/init_fullpage.js"></script>
     
+  <script src="lib/jquery/dist/jquery.js"></script>
   <script src="js/snap.svg.js"></script>
   <script src="js/background.js"></script>
+  <script src="lib/fullpage.js/vendors/scrolloverflow.js"></script>
+  <script src="lib/fullpage.js/dist/jquery.fullpage.js"></script>
+  <script src="js/init_fullpage.js"></script>
 
     <!--script src="js/background.js"></script-->
 </body>
